
_____________________________________________________________________________________________________


CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2019 MAR 28a
  * in tools/average.sh
    - added error handling of files with different number of columns and rows (Prasanna T.R.)
  * in bin
    - added heatbdry2D.wrp
   

2019 MAR 26b
  * in bin
    - added reentry_cube_sheath.wrp
    - modified reentry_sheath.wrp
  * in lib/soap/doc/report.tex
    - fixed typo "for\_parallel" in verbatim should be "for_parallel" 
  * in src/control.c
    - in longstr_t bib, fixed a spelling mistake in one of the citations
 

2019 MAR 26a
  * in model/emfield/_Ohm/emfield.c
    - deleted  _Qjoulek_interface()
    - added _Nk_max()
    - in find_Vk_from_mu(), now calls _Nk_max()
  * in model/emfield/_Ohm_generalized/emfield.c
    - renamed _Qjoulek to _Qjoulek_old
    - recoded _Qjoulek() 
    - added _Nk_max()
    - in find_Vk_from_mu(), now calls _Nk_max() instead of _Nk_smoothed()
    - in find_DeltaVk_from_mu() now calls _Nk_max() instead of _Nk_smoothed()


2019 MAR 24a
  * in model/emfield/_Ohm/emfield.c
    - renamed _Qjoulek to _Qjoulek_old
    - renamed _Qjoulek_new to _Qjoulek
    - renamed find_Vk_from_mu_old() to find_Vk_from_mu_veryold()
    - renamed find_Vk_from_mu() to find_Vk_from_mu_old()
    - coded new find_Vk_from_mu() 
  * renamed
    - emfieldfact to emfieldworkheatfact
  * in model/fluid/_*_plasma/fluid_source.c
    - in find_Semfield(), now calls _E_dot_J() instead of _E_dot_J_recast()


2019 MAR 23a
  * in model/emfield/_Ohm/emfield.c
    - added  _Qjoulek_new()
    - added _Qjoulek_interface()


2019 MAR 22b
  * in tools
    - added average.sh from Prasanna
  * in tools/README
    - added description of average.sh
  * in CONTRIB
    - added contribution by Prasanna


2019 MAR 22a
  * in model/chem/*/chem.c